mType/tests/testFiles/annotation/error/array_wrong_element_type_error.mt
// MYT-375: array usage rejects the wrong element type.

annotation Numbers {
    int[] values;
}

@Numbers(values = [1, "x"])
class Bad { }
